@@ -48,7 +48,7 @@ div.body {
 }
 
 div.related {
-    font-size: 1em;
+    font-size: 0.8em;
 }
 
 div.related ul {
