@@ -10,7 +10,7 @@
 <p><b><a href="{{ pathto('announce/index')}}">{{ release }} release</a></b>
 [<a href="{{ pathto('changelog') }}">Changelog</a>]</p>
 <p>
-<a href="http://pypi.python.org/pypi/pytest">pytest on PyPI</a>
+<a href="http://pypi.python.org/pypi/pytest">pytest/PyPI</a>
 </p>
 <pre>easy_install pytest</pre>
 <pre>pip install pytest</pre>
