@@ -1,29 +1,5 @@
 {% extends "!layout.html" %}
 
-{% block relbar1 %}
-{% endblock %}
-{% block relbar2 %}
-{% endblock %}
-
-{% block rootrellink %}
-{% endblock %}
-{% block sidebarrel %}
-{% endblock %}
-
-{% block header %}
-<div style="background-color: white; text-align: left; padding: 10px 10px 15px 15px">
-    <h1>pytest: rapid no-boilerplate testing with Python</h1>
-    <div style="text-align: left; font-size: 130%; vertical-align: middle;">
-            <a href="{{ pathto('index') }}">home</a>&nbsp;|&nbsp;
-            <a href="{{ pathto('contents') }}">all docs</a>&nbsp;|&nbsp;
-            <a href="{{ pathto('getting-started') }}">install</a>&nbsp;|&nbsp;
-            <a href="{{ pathto('example/index') }}">examples</a>&nbsp;|&nbsp;
-            <a href="{{ pathto('customize') }}">customize</a>&nbsp;|&nbsp;
-            <a href="https://bitbucket.org/hpk42/pytest/issues?status=new&status=open">issues</a>|&nbsp;
-            <a href="{{ pathto('contact') }}">contact</a>&nbsp;
-    </div>
-</div>
-{% endblock %}
 
 {% block footer %}
 {{ super() }}
