@@ -1,33 +1,0 @@
-
-.. _toc:
-
-Table of Contents
-========================
-
-.. note::
-   version 2.0 introduces :ref:`pytest as the main Python import name <naming20>`
-
-.. toctree::
-   :maxdepth: 2
-
-   overview
-   apiref
-   plugins
-   example/index
-   talks
-   develop
-   announce/index
-
-.. toctree::
-   :hidden:
-
-   changelog.txt
-   naming20.txt
-   example/attic
-
-Indices and tables
-==================
-
-* :ref:`genindex`
-* :ref:`modindex`
-* :ref:`search`
